--- a/MC2-KisahKata/Base.lproj/Main.storyboard
+++ b/MC2-KisahKata/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kTG-dL-oof">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HUH-zE-wfY">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -577,7 +577,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N92-pJ-J7C">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N92-pJ-J7C">
                                 <rect key="frame" x="28" y="557" width="335" height="38"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -585,8 +585,11 @@
                                     <constraint firstAttribute="height" constant="38" id="dw5-Xq-hnq"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="answerPressed:" destination="HUH-zE-wfY" eventType="touchUpInside" id="djb-yH-Q3s"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5mA-5h-XSP">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5mA-5h-XSP">
                                 <rect key="frame" x="28" y="665" width="335" height="38"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -594,13 +597,19 @@
                                     <constraint firstAttribute="width" constant="335" id="wBe-ZC-kC1"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="answerPressed:" destination="HUH-zE-wfY" eventType="touchUpInside" id="ZxJ-YU-htQ"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VsA-XP-teq">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VsA-XP-teq">
                                 <rect key="frame" x="28" y="711" width="335" height="30"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="answerPressed:" destination="HUH-zE-wfY" eventType="touchUpInside" id="XJx-D1-Tpb"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f5-W1-0j0">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f5-W1-0j0">
                                 <rect key="frame" x="28" y="611" width="335" height="38"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -608,6 +617,9 @@
                                     <constraint firstAttribute="width" constant="335" id="s9A-as-PVY"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="answerPressed:" destination="HUH-zE-wfY" eventType="touchUpInside" id="Uht-RK-kDa"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2jD-d0-mjx"/>
@@ -634,6 +646,20 @@
                             <constraint firstItem="5mA-5h-XSP" firstAttribute="leading" secondItem="VsA-XP-teq" secondAttribute="leading" id="vbw-Lm-XzN"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blurVIew" destination="FQ7-u6-sle" id="aak-9R-Wln"/>
+                        <outlet property="jawabanLabel" destination="7b6-IY-SC7" id="HLi-Zy-wbz"/>
+                        <outlet property="nextButtonBenar" destination="gaa-lc-BUa" id="eMh-7g-LKA"/>
+                        <outlet property="nextButtonSalah" destination="idE-Wf-4vq" id="9qy-u9-apc"/>
+                        <outlet property="optionA" destination="N92-pJ-J7C" id="Yij-bU-nm8"/>
+                        <outlet property="optionB" destination="3f5-W1-0j0" id="wLj-kb-DTm"/>
+                        <outlet property="optionC" destination="5mA-5h-XSP" id="qh2-e5-CEx"/>
+                        <outlet property="optionD" destination="VsA-XP-teq" id="4i7-vJ-tGX"/>
+                        <outlet property="pertanyaanLabel" destination="f2E-HN-u4y" id="eCx-tA-1Aa"/>
+                        <outlet property="popupBenarView" destination="gLI-f7-XKE" id="v8N-g5-qsH"/>
+                        <outlet property="popupSalahView" destination="Iwa-Ah-ZyI" id="9t9-Bd-HA1"/>
+                        <outlet property="thumbImage" destination="2SP-CU-9xb" id="BrZ-ZB-cvC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W6F-Q4-Zk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <view contentMode="scaleToFill" id="Iwa-Ah-ZyI">
@@ -658,6 +684,9 @@
                             <state key="normal" title="Button">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="nextButtonSalah:" destination="HUH-zE-wfY" eventType="touchUpInside" id="y37-BX-BBA"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jawaban Benar : Apel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7b6-IY-SC7">
                             <rect key="frame" x="77" y="245" width="164" height="21"/>
@@ -700,6 +729,9 @@
                             <state key="normal" title="Button">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="nextButtonBenar:" destination="HUH-zE-wfY" eventType="touchUpInside" id="nNf-3x-zt0"/>
+                            </connections>
                         </button>
                     </subviews>
                     <viewLayoutGuide key="safeArea" id="A69-Og-YzG"/>
@@ -708,13 +740,71 @@
             </objects>
             <point key="canvasLocation" x="1668" y="1420"/>
         </scene>
+        <!--Score View Controller-->
+        <scene sceneID="kGe-cZ-9Hj">
+            <objects>
+                <viewController storyboardIdentifier="ScoreViewController" id="SYQ-Ty-A1x" customClass="ScoreViewController" customModule="MC2_KisahKata" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IRR-uZ-AO1">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="M-Eggy-Senang " translatesAutoresizingMaskIntoConstraints="NO" id="0ch-6M-yda">
+                                <rect key="frame" x="80" y="204" width="230" height="235"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quiz Selesai" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKG-3y-KFo">
+                                <rect key="frame" x="110" y="449" width="170" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAR-fG-dhs">
+                                <rect key="frame" x="100" y="512" width="190" height="28.666666666666629"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wld-cD-Bs4">
+                                <rect key="frame" x="60" y="585" width="271" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <state key="normal" title="Kembali ke menu awal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5Sj-eI-Vaf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0ch-6M-yda" firstAttribute="top" secondItem="5Sj-eI-Vaf" secondAttribute="top" constant="160" id="90G-uy-cvl"/>
+                            <constraint firstItem="5Sj-eI-Vaf" firstAttribute="trailing" secondItem="oAR-fG-dhs" secondAttribute="trailing" constant="100" id="NFu-Je-BeP"/>
+                            <constraint firstItem="oAR-fG-dhs" firstAttribute="top" secondItem="mKG-3y-KFo" secondAttribute="bottom" constant="24" id="OGO-AY-nwO"/>
+                            <constraint firstItem="5Sj-eI-Vaf" firstAttribute="trailing" secondItem="0ch-6M-yda" secondAttribute="trailing" constant="80" id="WTv-2M-wVv"/>
+                            <constraint firstItem="mKG-3y-KFo" firstAttribute="top" secondItem="0ch-6M-yda" secondAttribute="bottom" constant="10" id="fe9-GW-qDT"/>
+                            <constraint firstItem="0ch-6M-yda" firstAttribute="leading" secondItem="5Sj-eI-Vaf" secondAttribute="leading" constant="80" id="hgK-4F-X6M"/>
+                            <constraint firstItem="oAR-fG-dhs" firstAttribute="leading" secondItem="5Sj-eI-Vaf" secondAttribute="leading" constant="100" id="myN-ov-z4H"/>
+                            <constraint firstItem="mKG-3y-KFo" firstAttribute="leading" secondItem="5Sj-eI-Vaf" secondAttribute="leading" constant="110" id="x9b-fq-eTR"/>
+                            <constraint firstItem="5Sj-eI-Vaf" firstAttribute="trailing" secondItem="mKG-3y-KFo" secondAttribute="trailing" constant="110" id="z4g-wN-ztE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="poinLabel" destination="oAR-fG-dhs" id="2Yn-A3-sve"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4ZZ-Qv-gzb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3080" y="1425.3554502369668"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ButtonCerita" width="321" height="221"/>
         <image name="KosaKataImage" width="321" height="221"/>
+        <image name="M-Eggy-Senang " width="230" height="235"/>
         <image name="Rectangle " width="345" height="174"/>
         <image name="Rectangle 2" width="345" height="174"/>
         <image name="img_S_1_1" width="1560" height="1560"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
